# QtBase

./: .gitignore  CMakeLists.txt  MainWidget.cpp  MainWidget.h  README.md  main.cpp
01.defSigSlot/: Person.cpp  Person.h  win.cpp  win.h  win.ui
02.Calc/: calc.cpp  calc.h  calc.ui
03.openCVImage/: imagewidget.cpp  imagewidget.h  imagewidget.ui
04.threadBase/: signalbasewidget.cpp  signalbasewidget.h  signalbasewidget.ui  sortThread.cpp  sortThread.h
05.Network/: clientwidget.cpp  clientwidget.h  clientwidget.ui  serverwidget.cpp  serverwidget.h  serverwidget.ui
test/: CMakeLists.txt  add.cpp  add.h  test.cpp
